--- a/conf/ios.conf
+++ b/conf/ios.conf
@@ -1,29 +1,29 @@
 {
 	"icons": [
 			{
-				"name":   "iTunesArtwork.png",
-				"width":  "512",
-				"height": "512"
-			},
-			{
 				"name": "iTunesArtwork@2x.png",
 				"width": "1024",
 				"height": "1024"
 			},
 			{
-				"name": "Icon-60@2x.png",
-				"width": "120",
-				"height": "120"
+				"name": "Icon.png",
+				"width": "57",
+				"height": "57"
 			},
 			{
-				"name": "Icon-76.png",
-				"width": "76",
-				"height": "76"
+				"name": "Icon@2x.png",
+				"width": "114",
+				"height": "114"
 			},
 			{
-				"name": "Icon-Small-40.png",
-				"width": "40",
-				"height": "40"
+				"name": "Icon-Small@2x.png",
+				"width": "58",
+				"height": "58"
+			},
+			{
+				"name": "Icon-Small@3x.png",
+				"width": "87",
+				"height": "87"
 			},
 			{
 				"name": "Icon-Small-40@2x.png",
@@ -31,14 +31,29 @@
 				"height": "80"
 			},
 			{
-				"name": "Icon-Small.png",
-				"width": "29",
-				"height": "29"
+				"name": "Icon-Small-40@3x.png",
+				"width": "120",
+				"height": "120"
 			},
 			{
-				"name": "Icon-Small@2x.png",
-				"width": "58",
-				"height": "58"
+				"name": "Icon-60@2x.png",
+				"width": "120",
+				"height": "120"
+			},
+			{
+				"name": "Icon-60@3x.png",
+				"width": "180",
+				"height": "180"
+			},
+			{
+				"name": "Icon-76@2x.png",
+				"width": "152",
+				"height": "152"
+			},
+			{
+				"name": "Icon-76@3x.png",
+				"width": "228",
+				"height": "228"
 			}
 		]
 }
